# seashell

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/cli/: control.rs  output.rs  parser.rs
src/client/: connect.rs  data.rs  handler.rs
src/storage/: config.rs  context.rs  provider.rs
