[package]
name = "shh"
version = "0.1.0"
edition = "2021"
description = "🐚 Seashell is a handy SSH client written in Rust (sea noise inside)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shaonis/seashell"
homepage = "https://github.com/shaonis/seashell"
documentation = "https://github.com/shaonis/seashell#readme"
keywords = ["ssh", "cli", "utility", "remote", "terminal"]
categories = [
    "command-line-utilities",
    "network-programming",
]

[dependencies]
# Error handling
anyhow = "1.0.95"
thiserror = "2.0.11"
# Command-line parsing
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.43"
# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_with_macros = "3.12.0"
serde_json = "1.0.137"
serde_yml = "0.0.12"
# Terminal
crossterm = "0.28.1"
rpassword = "7.3.1"
owo-colors = "4.1.0"
# Async runtime
tokio = { version = "1.43.0", features = ["fs", "io-std"] }
tokio-fd = "0.3.0"
# SSH realization
russh = "0.50.0"
# Utilities
derive_more = { version = "2.0.1", features = ["from", "display"] }
directories = "6.0.0"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
regex = "1.11.1"
smart-default = "0.7.1"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
panic = "abort"
codegen-units = 1
