[package]
name = "shh"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "User-friendly and modern SSH client for everyday use"
license-file = "LICENSE"
repository = "https://github.com/shaonis/seashell"
homepage = "https://github.com/shaonis/seashell"
documentation = "https://github.com/shaonis/seashell#readme"
keywords = ["ssh", "cli", "utility", "remote", "terminal"]
categories = [
    "command-line-utilities",
    "network-programming",
    "config",
    "cryptography",
]

[dependencies]
# SSH realization
russh = "0.56.0"
# Terminal
clap = { version = "4.5.53", default-features = false, features = ["help", "color", "usage", "error-context", "derive" ] }
clap_complete = "4.5.64"
crossterm = "0.29.0"
secrecy = "0.10.3"
rpassword = "7.4.0"
owo-colors = "4.2.3"
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_with_macros = "3.16.1"
serde_yml = "0.0.12"
serde_json = "1.0.148"
# Async
tokio = { version = "1.48.0", default-features = false, features = ["fs", "io-std"] }
tokio-fd = "0.3.0"
# Errors
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.29"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
# Utilities
directories = "6.0.0"
indexmap = { version = "2.12.1", features = ["serde"] }
itertools = "0.14.0"
regex-lite = "0.1.8"
smart-default = "0.7.1"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
panic = "abort"
codegen-units = 1
